added photos and about

--- a/clients.html
+++ b/clients.html
@@ -29,18 +29,15 @@
       <p>(708) 308-3531 | <a href="mailto:nancyashburn149@gmail.com">nancyashburn149@gmail.com</a></p>
     </div>
     <div class="container">
-      <br /><br />
-      <div class="row">
-        <div class="col-md-8">
-          <h3>About Me</h3>
-          <p>Nancy Ashburn graduated from the University of Illinois School of Business with a degree in Accountancy.  She worked for Peat Marwick in the early 1990s, then later took a position at McDonald's Corporation.   In 1996, she had her first child with husband Douglas Ashburn, a son named Colin.  She somehow kept up with his tireless energy and high spirits, but was relieved when her second child, Audrey, was much more calm.  Nancy took a position as a part time music teacher, while raising her kids to be the amazing adults that they have now become.  Both Audrey and Colin say how much they owe to their mother for her endless love and support they received in their childhoods, and still receive to this day.
-          </p>
-          <p>Thanks for everything you have done for us- Love, Audrey and Colin <3</p>
+      <br /><br /><br /><br />
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-3"><img style="padding-top: 1em; margin-left: 2em" class="img-fluid" src="rotary.png" alt="Rotary Club of Chicago" /></div>
+            <div class="col-md-3"><img style="padding-top: 2em; margin-left: 0em" class="img-fluid" src="broida.png" alt="Broida and Nichele" /></div>
+            <div class="col-md-3"><img style="padding-top: 2em; margin-left: 3em" class="img-fluid" src="monarch.png" alt="Monarch Realty" /></div>
+            <div class="col-md-3"><img style="padding-top: 0em; margin-left: 4em" class="img-fluid" src="JJLCO.gif" alt="JJLCO" /></div>
         </div>
-        <div class="col-md-4">
-          <img class="img-fluid family" src="family2.jpg" alt="">
-        </div>
-      </div>
     </div>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
